# freerouting-rs

./: .gitattributes  .gitignore  ACCEPTANCE.md  Cargo.toml  OUTSTANDING.md  README.md  SETUP.md  STATUS.md  bench_report.md  justfile
.claude/: settings.json
artifacts/: baseline_rs.ses
crates/fr-board/: Cargo.toml
crates/fr-board/src/: board.rs  item.rs  layer.rs  lib.rs  net.rs  padstack.rs  rules.rs  units.rs
crates/fr-cli/: Cargo.toml
crates/fr-cli/src/: main.rs
crates/fr-dsn/: Cargo.toml
crates/fr-dsn/src/: lexer.rs  lib.rs  reader.rs  sexp.rs  writer.rs
crates/fr-dsn/tests/: altium_validator.rs  parse_real_board.rs
crates/fr-dsn/tests/fixtures/: altium_board.dsn
crates/fr-engine/: Cargo.toml
crates/fr-engine/benches/: route_bench.rs
crates/fr-engine/src/: interactive.rs  lib.rs
crates/fr-engine/tests/: drc.rs  offboard.rs  roomdoor_ab.rs  via_check.rs
crates/fr-geometry/: Cargo.toml
crates/fr-geometry/src/: box2d.rs  convex.rs  dist.rs  lib.rs  point.rs  polygon.rs
crates/fr-geometry/tests/: properties.rs
crates/fr-gui/: Cargo.toml
crates/fr-gui/src/: app.rs  main.rs  padgeom.rs  picking.rs  render.rs  view.rs
crates/fr-route/: Cargo.toml  ROOMDOOR_DESIGN.md
crates/fr-route/src/: astar.rs  grid.rs  lib.rs  locate.rs  maze.rs  obstacles.rs  room.rs  router.rs
crates/fr-spatial/: Cargo.toml
crates/fr-spatial/src/: lib.rs
harness/: README.md  altium_roundtrip.pas  gui_screenshot.sh  roundtrip.sh
