[package]
name = "fr-gui"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[[bin]]
name = "freerouting-rs-gui"
path = "src/main.rs"

[dependencies]
fr-geometry = { path = "../fr-geometry" }
fr-board = { path = "../fr-board" }
fr-dsn = { path = "../fr-dsn" }
fr-engine = { path = "../fr-engine" }
# Use the wgpu backend (not the default glow/OpenGL): WSLg's GL stack fails to provide
# a GL driver/config (ZINK pdev / NoGlutinConfigs), but wgpu can fall back to Vulkan or
# software (lavapipe). default-features=false drops the glow default.
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts", "wayland", "x11"] }
egui = "0.29"
rfd = "0.15"
